[package]
name = "jmatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
log = "0.4.20"
log4rs = "1.2.0"
rand = "0.8.5"
ratatui = { version = "0.26.0", features = ["all-widgets"] }
