[package]
name = "rjmatrix"
version = "1.0.0"
edition = "2021"
description = "Creates the matrix in the terminal. Use `c` to cycle colors, `0-9` to change speed, and `q` to quit."
authors = ["Jake J <roastbeefer000@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
crossterm = "0.27.0"
log = "0.4.20"
log4rs = "1.2.0"
rand = "0.8.5"
ratatui = { version = "0.26.0", features = ["all-widgets"] }
